feat: implement admin multitenancy with merchant-scoped RBAC
Add merchant tenant isolation across all admin modules — auth, product,
order, payment, inventory, coupon, seckill, knowledge, and merchant
management. Introduce MerchantTenantSupport base entity, tenant-aware
service queries, and merchant-scoped admin controllers. Strengthen
gateway auth filter authorization with tenant-level checks. Add
merchant admin UI routes, views, and comprehensive tenant test coverage.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>